# FatShashCorChess-0

./: .gitignore  CMakeLists.txt  Makefile  README.md  hello.txt
bench/: fens.txt  tactical_fens.txt
src/: eval_bench.cpp  eval_extract.cpp  eval_params_tuned.h  eval_tables.cpp  eval_tables.h  evaluator.h  hce_evaluator.cpp  hce_evaluator.h  hybrid_evaluator.cpp  hybrid_evaluator.h  main.cpp  movegen.cpp  movepicker.cpp  movepicker.h  pawn_hash.h  position.cpp  position.h  search.cpp  search.h  search_bench.cpp
src/lc0/: lc0_activation.cpp  lc0_activation.h  lc0_attention_value.cpp  lc0_attention_value.h  lc0_evaluator.cpp  lc0_evaluator.h  lc0_features112.cpp  lc0_features112.h  lc0_linear_backend.cpp  lc0_linear_backend.h  lc0_proto_wire.cpp  lc0_proto_wire.h  lc0_tables.cpp  lc0_tables.h  lc0_tables_data.inc  lc0_weights.cpp  lc0_weights.h  ort_gemm_models.h
tests/: eval_tests.cpp  lc0_forward_tests.cpp  lc0_loader_tests.cpp  lc0_toggle_tests.cpp  perft_tests.cpp  search_tests.cpp
tools/: apply_params.py  lc0_profile_matrix.py  nn_time_safety_harness.py  profile_report_template.md  profile_search_wpr.ps1  texel_fit.py  version_sprt.py
